# elections-api

./: .coveragerc  .gitignore  .isort.cfg  .pylint.ini  .python-version  .tool-versions  .verchew.ini  CONTRIBUTING.md  Makefile  Procfile  README.md  app.json  circle.yml  pomace.yml  pyproject.toml  pytest.ini  requirements.txt  text_check.py
.gitignore/: reference.js
config/: urls.py
config/settings/: CONTRIBUTING.md  base.py  default.py  local.py  production.py  staging.py  test.py
content/: Alaskan-Independence-Party.md  American-Delta-Party.md  American-Freedom-Party.md  Citizen-Party-of-the-United-States.md  Democrat.md  Freedom-Socialist-Party.md  Humane-Party.md  Justice-Party.md  Legal-Marijuana-Now-Party.md  Prohibition-Party.md  Reform-party.md  Republican.md  Socialist-Action.md  Socialist-Alternative.md  Socialist-Equality-Party.md  Socialist-Party-USA.md  Socialist-Workers-Party.md  Solidarity-Party.md  United-States-Marijuana-Party.md  United-States-Pirate-Party.md  Workers-World-Party.md  districts.txt  elections.txt  parties.txt  positions.txt
content/districts/: Authority.md  City.md  Community College.md  County Commissioner.md  County.md  Court of Appeals.md  District Court.md  District Library.md  Intermediate School.md  Jurisdiction.md  Ward.md
content/elections/: Presidential Primary.md
content/parties/: Alaskan Independence.md  Alaskan-Independence-Party.md  American Freedom.md  American-Delta-Party.md  American-Freedom-Party.md  Citizen-Party-of-the-United-States.md  Democratic.md  Freedom Socialist.md  Freedom-Socialist-Party.md  Green Party.md  Green.md  Humane-Party.md  Humane.md  Justice-Party.md  Justice.md  Legal Marijuana Now.md  Legal-Marijuana-Now-Party.md  Libertarian.md  No Party Affiliation.md  Party for Socialism and Liberation.md  Party-for-Socialism-and-Liberation.md  Position-Ideology-definition.md  Prohibition-Party.md  Reform-party.md  Reform.md  Republican.md  Socialist Action.md  Socialist Party USA.md  Socialist-Action.md  Socialist-Alternative.md  Socialist-Equality-Party.md  Socialist-Party-USA.md  Socialist-Workers-Party.md  Solidarity-Party.md  U.S. Taxpayers.md  United States Marijuana.md  United States Pirate.md  United-States-Marijuana-Party.md  United-States-Pirate-Party.md  Workers World.md  (+1 more)
content/positions/: Assessor.md  Attorney General.md  Board Member.md  Board of Light and Power  Board of Review  Board of Trustees Member.md  Charter Commission.md  City Clerk  City Commission.md  City Commissioner.md  City Council.md  City Treasurer.md  Clerk - Treasurer.md  Commission.md  Commissioner At Large.md  Commissioner By Ward  Commissioner By Ward.md  Commissioner.md  Community College Board of Trustees Member.md  Comptroller.md  Council Member At Large.md  Council Member By Ward.md  Council Member.md  Council.md  Councilmen.md  County Commissioner.md  Delegate to County Convention.md  Drain Commissioner.md  Electors of President and Vice-President of The United States.md  Governor and Lieutenant Governor.md  Governor of Wayne State University.md  Governor.md  Judge of Circuit Court.md  Judge of Court of Appeals.md  Judge of District Court.md  Judge of Probate Court.md  Justice of Supreme Court.md  Library Board Director.md  Library Board Member.md  Local School District Board Member.md  (+16 more)
elections/: admin.py  app.py  commands.py  constants.py  defaults.py  exceptions.py  fields.py  filters.py  helpers.py  models.py  mvic.sos.state.mi.us.pem  parsers.py  scraper.py  scrapers.py  serializers.py  urls.py  views.py  viewsets.py
elections/api/: urls.py  v1.py
elections/glossary_terms/: __init__.py  spam.html
elections/migrations/: 0001_initial.py  0002_auto_20180630_2110.py  0002_auto_20180701_2131.py  0002_auto_20180710_1841.py  0003_auto_20180702_2116.py  0003_auto_20180711_0844.py  0004_auto_20180711_1027.py  0004_district_population.py  0005_auto_20180704_2115.py  0005_auto_20180711_2138.py  0006_auto_20180704_2141.py  0006_auto_20180711_2148.py  0007_auto_20180712_2221.py  0007_remove_district_mi_sos_id.py  0008_auto_20180704_2143.py  0008_auto_20180712_2237.py  0009_auto_20180705_0751.py  0009_ballotwebsite_source.py  0010_auto_20180705_1757.py  0010_auto_20180713_1704.py  0011_auto_20180707_1805.py  0011_auto_20180713_1713.py  0012_auto_20180713_1730.py  0012_election_active.py  0013_auto_20180708_1412.py  0013_auto_20180714_1321.py  0014_auto_20180708_2102.py  0014_auto_20180721_1817.py  0015_auto_20180731_2235.py  0015_registrationstatus_poll.py  0016_auto_20180709_2338.py  0016_auto_20180804_1259.py  0017_auto_20180710_0005.py  0017_auto_20180807_2005.py  0018_auto_20180710_0021.py  0018_auto_20180807_2318.py  0019_auto_20180915_1725.py  0020_auto_20180930_1230.py  0021_party_color.py  0022_auto_20180930_1442.py  (+48 more)
elections/parsers/: __init__.py  general.py  primary.py
elections/templates/: index.html
elections/tests/: test_helpers.py  test_models.py
notebooks/: scrapper.ipynb
scripts/: render_readme.py
tests/: conftest.py  factories.py  test_api.py  test_api_ballots.py  test_api_elections.py  test_api_glossary.py  test_api_positions.py  test_api_precincts.py  test_api_registrations.py  test_api_status.py  test_commands.py  test_defaults.py  test_deployment.py  test_parse.py  test_parse_consolidated.py  test_parse_general.py  test_parse_primary.py  test_parsers.py  test_scrape_and_parse.py
tests/cassettes/: it_handles_unknown_voters.yaml  it_handles_unknown_voters_v2.yaml  it_hides_past_elections.yaml  it_returns_data_for_a_registered_voter.yaml  it_returns_data_for_a_registered_voter_v2.yaml  test_2020_general_ballots[133-84].yaml  test_2020_general_ballots[1633-86].yaml  test_2020_general_ballots[256-94].yaml  test_2020_general_ballots[268-93].yaml  test_2020_general_ballots[4279-93].yaml  test_2020_general_ballots[6477-109].yaml  test_2020_general_ballots[7558-101].yaml  test_2020_general_ballots[901-90].yaml  test_2020_primary_ballots[160-1].yaml  test_2020_primary_ballots[1828-25].yaml  test_2020_primary_ballots[6911-37].yaml  (+55 more)
(+24 files in other folders)
