[tool.poetry]

name = "elections"
version = "2.0b1"
description = "APIs for voter registration status and sample ballots in Michigan."

authors = ["Citizen Labs <info@citizenlabs.com>"]
license = "GPLv3"

[tool.poetry.dependencies]

python = "^3.7"

# Django
django = "~3.1.13"
django-grappelli = "^2.15.1"
django-filter = { git = "https://github.com/citizenlabsgr/django-filter", branch = "combine-filters" }
django-model-utils = { git = "https://github.com/jazzband/django-model-utils", rev = "ffa1a85dc7fe3fa8a56e8735b4ac881092abf216" }

# Django REST Framework
djangorestframework = "^3.12.4"
drf-yasg = "^1.20"
django-cors-headers = "^3.2.0"

# Databases
dj-database-url = "^0.5.0"
psycopg2-binary = "=2.8.4"

# Caches
django-redis-cache = "*"

# Markdown
markdown = "*"
pymdown-extensions = "*"
pygments = "*"

# Utilities
beautifulsoup4 = "^4.8.2"
factory_boy = "*"
fake-useragent = { git = "https://github.com/Jordan9675/fake-useragent", rev = "b608f96232874c32cd5e878f12dbe1a5bb5c8eaa" } # wait for ~0.1.12
minilog = "^2.0"
nameparser = "^1.0.4"
pendulum = "*"
pomace = "~0.6.12"
requests = "^2.25"

# Production Server
gunicorn = "^19.8"
whitenoise = "^4.1.4"
bugsnag = "^3.4"

[tool.poetry.dev-dependencies]

# Formatting
isort = "=4.3.21"
black = "=20.8b1"

# Linters
pylint = "~2.4.4"
pylint-django = "*"
mypy = "*"

# Testing
pytest = "^4.5"
pytest-django = "*"
pytest-describe = "^1.0"
pytest-expecter = "^2.2"
pytest-vcr = "*"
pytest-cov = "^2.7"
pytest-watch = "^4.2"
coverage = "<5"

# Reports
coveragespace = "^3.1"

# Utilities
ipdb = "~0.12.2"  # export PYTHONBREAKPOINT=ipdb.set_trace
django-extensions = "*"
pygraphviz = "*"

# Development Server
django-debug-toolbar = "*"
django-livereload-server = "*"

# Notebooks
jupyter = "^1.0"

[tool.black]

target_version = ['py37']
skip-string-normalization = true
