[tool.poetry]

name = "elections"
version = "3.1b1"
description = "APIs for voter registration status and sample ballots in Michigan."
authors = ["Citizen Labs <info@citizenlabs.com>"]
license = "GPLv3"

[tool.poetry.dependencies]

python = "^3.11"

# Django
django = "~3.2.18"
django-grappelli = "^3.0"
django-filter = { git = "https://github.com/citizenlabsgr/django-filter", branch = "combine-filters" }
django-model-utils = "^4.2"

# Django REST Framework
djangorestframework = "^3.12.4"
drf-yasg = "^1.20"
django-cors-headers = "^3.2.0"

# Databases
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.5"

# Caches
django-redis-cache = "*"

# Markdown
markdown = "*"
pymdown-extensions = "*"
pygments = "*"

# UML
pygraphviz = { version = "^1.7", optional = true }

# Utilities
beautifulsoup4 = "^4.8.2"
factory_boy = "*"
fake-useragent = "^1.1"
minilog = "^2.1"
nameparser = "^1.0.4"
pendulum = "*"
pomace = "~0.12"
requests = "^2.25"

# Production Server
gunicorn = "^19.8"
whitenoise = "^4.1.4"
bugsnag = "^4.2"

[tool.poetry.dev-dependencies]

# Formatting
isort = "^5.10"
black = "^22.1"

# Linters
pylint = "~2.15"
pylint-django = "~2.5"
mypy = "~0.910"
django-stubs = "~1.9"
types-markdown = "*"
types-redis = "*"
types-requests = "*"

# Testing
pytest = "^7.1"
pytest-django = "*"
pytest-describe = "^2.0.1"
pytest-expecter = "^2.3"
pytest-vcr = "*"
pytest-cov = "^3.0"
pytest-watch = "^4.2"
time-machine = "^2.8"

# Reports
coveragespace = "^4.2"
coveralls = "*"

# Utilities
ipdb = "~0.13"  # export PYTHONBREAKPOINT=ipdb.set_trace
django-extensions = "*"

# Development Server
django-debug-toolbar = "*"
django-livereload-server = "*"

# Notebooks
jupyter = "^1.0"

[tool.poetry.extras]

uml = ["pygraphviz"]

[tool.black]

quiet = true

[tool.isort]

profile = "black"

[tool.mypy]

ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true

cache_dir = ".cache/mypy/"

plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]

django_settings_module = "config.settings.local"
