[tool.poetry]

name = "elections"
version = "3.3"
description = "APIs for voter registration status and sample ballots in Michigan."
authors = ["Citizen Labs <info@citizenlabs.com>"]
license = "GPLv3"

[tool.poetry.dependencies]

python = "3.11.5"

# Django
django = "~5.0b1"
django-cors-headers = "^3.2.0"
django-model-utils = "^4.2"
django-grappelli = "^3.0.8"

# Django REST Framework
djangorestframework = "^3.14"
django-filter = { git = "https://github.com/citizenlabsgr/django-filter", branch = "combine-filters" }
drf-yasg = "^1.21.7"

# Databases
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.9"

# Caches
django-redis-cache = "*"

# Markdown
markdown = "*"
pymdown-extensions = "*"
pygments = "*"

# UML
pygraphviz = { version = "^1.7", optional = true }

# Utilities
beautifulsoup4 = "^4.8.2"
factory_boy = "^3.3"
fake-useragent = "^1.1"
minilog = "^2.1"
nameparser = "^1.0.4"
pendulum = "^2.1"
pomace = "~0.12"
requests = "^2.31"

# Production Server
gunicorn = "^19.8"
whitenoise = "^6.5"
bugsnag = "^4.6"

[tool.poetry.dev-dependencies]

# Formatting
black = "^24.3"
isort = "^5.12"

# Linters
pylint = "~2.15"
pylint-django = "~2.5"
mypy = "~1.6"
django-stubs = { version = "~4.2.6", extras = ["compatible-mypy"] }
types-markdown = "*"
types-redis = "*"
types-requests = "*"

# Testing
pytest = "^7.4"
pytest-django = "*"
pytest-describe = "^2.1"
pytest-expecter = "^3.0"
pytest-vcr = "*"
pytest-cov = "^4.1"
pytest-watch = "^4.2"
time-machine = "^2.8"

# Reports
coveragespace = "^6.0"
coveralls = "*"

# Utilities
ipdb = "~0.13"
django-extensions = "*"

# Development Server
django-browser-reload = "^1.12.1"
django-debug-toolbar = "*"

# Notebooks
jupyter = "^1.0"

[tool.poetry.extras]

uml = ["pygraphviz"]

[tool.black]

quiet = true

[tool.isort]

profile = "black"

[tool.mypy]

ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true

cache_dir = ".cache/mypy/"

plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]

django_settings_module = "config.settings.local"
